--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reporter-cli",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Promise crawler",
   "main": "index.js",
   "scripts": {
@@ -25,8 +25,11 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "jsonfile": "^2.4.0",
+    "ms": "^0.7.3",
     "p-queue": "^1.0.0",
+    "progress": "^1.1.8",
     "request": "^2.81.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "yargs": "^7.0.2"
   }
 }
