--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reporter-cli",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Promise crawler",
   "main": "index.js",
   "scripts": {
@@ -25,7 +25,7 @@
     "cheerio": "^0.22.0",
     "jsonfile": "^2.4.0",
     "ms": "^0.7.3",
-    "p-queue": "^1.0.0",
+    "p-queue-safe": "^0.0.2",
     "progress": "^1.1.8",
     "request": "^2.81.0",
     "request-promise": "^4.1.1",
