--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ node_js:
   - "6"
 before_install:
   - npm i -g reporter-cli
-script:
-  - reporter --site https://news.ycombinator.com/news\?p\= --list .athing --link .storylink --title .storylink --limit 10 --special 'username: >.hnuser*text, score: >.score*text'
+script: >
+  reporter --site https://news.ycombinator.com/news\?p\= 
+           --list .athing --link .storylink
+           --title .storylink
+           --limit 10
+           --special 'username: >.hnuser*text, score: >.score*text'
