--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "reporter-cli",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "Crawler queue creation tool for paging",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "indatawetrust",
   "license": "MIT",
   "repository": {
@@ -31,5 +30,8 @@
     "request": "^2.81.0",
     "request-promise": "^4.1.1",
     "yargs": "^7.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.18.0"
   }
 }
